--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="amphtml" href="https://ampgr.com/data-sdy/">
 	<meta name="google-site-verification" content="r3fq8rrpfyCbrRAmwv3INlNPpLk1xQtPo9lgmcGD09I" />
-    <link rel="canonical" href="http://data-sdy.pandapower.org/">
+    <link rel="canonical" href="http://data-sdy.zra.com/">
     <meta name="keywords" content="data sdy, result sdy, pengeluaran sdy, data sydney, live draw sdy, sdy hari ini, togel sdy" />
     <link rel="icon" type="image/png" href="//ampstore.org/img/remixtoto.jpg?crop=center&height=32&v=1701489460&width=32">
     <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
     <title>Data SDY - Result SDY - Pengeluaran SDY - Data Sydney</title>
     <meta name="description" content="Temukan data sdy 2023 terlengkap. Dapatkan juga result sdy, pengeluaran sdy, keluaran sdy hari ini, dan tabel data sydney 2023 terlengkap hanya di sini.">
     <meta property="og:site_name" content="Data SDY">
-    <meta property="og:url" content="http://data-sdy.pandapower.org/">
+    <meta property="og:url" content="http://data-sdy.zra.com/">
     <meta property="og:title" content="Data SDY - Result SDY - Pengeluaran SDY - Data Sydney">
     <meta property="og:type" content="product">
     <meta property="og:description" content="Temukan data sdy 2023 terlengkap. Dapatkan juga result sdy, pengeluaran sdy, keluaran sdy hari ini, dan tabel data sydney 2023 terlengkap hanya di sini.">
@@ -1369,7 +1369,7 @@
           "@type": "Organization",
           "name": "Data SDY",
           "sameAs": ["", "", "", "", "", "", "", "", ""],
-          "url": "http://data-sdy.pandapower.org/"
+          "url": "http://data-sdy.zra.com/"
         }
       </script>
     </div>
@@ -1602,7 +1602,7 @@
                       <img class="aligncenter wp-image-419 size-full" src="https://springharborlife.org/gambar/daftar.png" alt="" width="300" height="90">
                     </a>
                     <p style="text-align: center;"><span style="font-size: 18pt;"><strong>Data SDY - Result SDY - Pengeluaran SDY - Data Sydney</strong></span></p>
-                    <p>Temukan <a href="http://data-sdy.pandapower.org/"><strong>data sdy</strong></a> 2023 terlengkap. Dapatkan juga result sdy, pengeluaran sdy, keluaran sdy hari ini, dan tabel data sydney 2023 terlengkap hanya di sini.</p>
+                    <p>Temukan <a href="http://data-sdy.zra.com/"><strong>data sdy</strong></a> 2023 terlengkap. Dapatkan juga result sdy, pengeluaran sdy, keluaran sdy hari ini, dan tabel data sydney 2023 terlengkap hanya di sini.</p>
                   </div>
                   <script src="//robin.alterbridge.com/cdn/shop/t/2/assets/share.js?v=13024540447964430191701489264" defer="defer"></script>
                   <share-button id="Share-template--17070971420920__main" class="share-button quick-add-hidden">
@@ -1623,7 +1623,7 @@
                       <div class="share-button__fallback motion-reduce">
                         <div class="field">
                           <span id="ShareMessage-template--17070971420920__main" class="share-button__message hidden" role="status"></span>
-                          <input type="text" class="field__input" id="ShareUrl-template--17070971420920__main" value="http://data-sdy.pandapower.org/" placeholder="Link" onclick="this.select();" readonly>
+                          <input type="text" class="field__input" id="ShareUrl-template--17070971420920__main" value="http://data-sdy.zra.com/" placeholder="Link" onclick="this.select();" readonly>
                           <label class="field__label" for="ShareUrl-template--17070971420920__main">Link</label>
                         </div>
                         <button class="share-button__close hidden no-js-hidden">
@@ -1686,7 +1686,7 @@
                 "@context": "http://schema.org/",
                 "@type": "Product",
                 "name": "Data SDY - Result SDY - Pengeluaran SDY - Data Sydney \u0026 Link Login Resmi Terpercaya",
-                "url": "http://data-sdy.pandapower.org/",
+                "url": "http://data-sdy.zra.com/",
                 "image": ["https://ampstore.org/img/remixtoto.jpg?v=1701492618\u0026width=1920"],
                 "description": "Temukan data sdy 2023 terlengkap. Dapatkan juga result sdy, pengeluaran sdy, keluaran sdy hari ini, dan tabel data sydney 2023 terlengkap hanya di sini.",
                 "brand": {
